main1.css
/* Chemisty HTML Page CSS Code */

.nav {
    background-color: gray;
    color: #ffffff;
    list-style: none;
    text-align: right;
    padding: 20px 0 20px 0;
}

.nav > li {
    display: inline-block;
    padding: 0 25px 0 25px;
    font-size: 12px;
    font-family: sans-serif;
}

.nav > li > a {
    text-decoration: none;
    color: #000000;
}

.nav > li > a:hover {
    color: #c1c1c1;
}

h1 {
    text-align: center;
    font-size: 30px;
}

h2 {
    font-size: 20px;
    text-align: center;
}

#TopicOneTitle {
    text-align: left;
    font-size: 15px;
    padding: 0 0 0 10px;
}

.Headings {
    font-size: 15px;
    padding: 0 0 0 10px;
    font-weight: bold;
}

.Download Links {
    font-size: 15px;
    padding: 0 0 0 15px;
}

headings {
    font-size: 20px;
    text-align: left;
    font-weight: bold;
}

#IntroductionParagraph {
    font-size: 15px;
    text-align: center;
}

li2 {
    padding: 0 0 10px 0px;
    font-size: 12px;
}

/* 3 States of Matter Bulletpoint */

#FB {
    padding: 0 0 10px 40px;
    font-size: 12px;
}

/* Heating and Cooling Sentance */

#CC {
    padding: 0 0 10px 40px;
    font-size: 12px;
}

/* Fraction Code */
.fraction {
    display: inline-block;
    vertical-align: middle;
    margin: 0 0.2em 0.4ex;
    text-align: center;
}

.fraction > span {
    display: block;
    padding-top: 0.15em;
}

.fraction span.fdn {
    border-top: thin solid black;
}

.fraction span.bar {
    display: none;
}

/* Titles which are used to divide between the different sub categories for the sub topics */
.Titles {
    font-weight: bold;
    font-size: 13px;
    padding: 0 0 0 20px;
    margin-bottom: 0px;
    margin-top: 10px;
}

/* Bullet Points for Solids Points */
#SolidsTitle {
    font-weight: bold;
    font-size: 13px;
    padding: 0 0 0 60px;
}

/* Bullet Points for Solids Points */
.StatesofMatterTitles {
    padding: 0 0 0 60px;
}

.SolidsPoints {
    padding: 0 25px 0 80px;
}

.SolidsSubPoints {
    padding: 0 25px 0 100px;
}

.ElementsPoints {
    padding: 0 0 0 40px;
}

.ElementsSubPoints {
    padding: 0 0 0 60px;
}

.ElementsSubSubPoints {
    padding: 0 0 0 80px;
}

.SubPoints {
    padding: 0 0 0 60;
}

.SubSubPoints {
    padding: 0 0 0 80;
}

/* Dark Mode Code */

section {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 210vh;
    box-sizing: border-box;
    padding: 75px;
    transition: 0s;
}

section.dark {
    background: #262626;
    color: #fff;
    transition: 0.5s;
}

ul1 {
    position: absolute;
    top: 20px;
    right: 20px;
    margin: 0px;
    padding: 0;
    width: 100px;
    height: 30px;
    z-index:1;
    border: 1px solid #000;
    border-radius: 4px;
    cursor: pointer;
    overflow: hidden;   
}

ul1.active{
 border-color:#fff;
}

ul1 li {
    list-style: none;
    width: 100%;
    height: 30px;
    text-align: center;
    text-transform: uppercase;
    transition: 0.5s;
}

ul1.active li {
    transform: translateY(-30px)
}

ul1 li span {
    display: block;
    height: 30px;
    line-height: 30px;
    width: 100%;
    color: #262626;
    background: #fff;
}

ul1 li span:nth-child(1) {
    background: #262626;
    color: #fff;
}

